# django-extensions-collection

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  demo.py  pyproject.toml  pytest.ini  setup.py  test_settings.py  test_urls.py  web_demo.py
.github/: FUNDING.yml
django_extensions/: __init__.py  apps.py
django_extensions/activator_model/: README.md  __init__.py  models.py  tests.py
django_extensions/active_manager/: README.md  __init__.py  managers.py  tests.py
django_extensions/ajax_required/: README.md  __init__.py  decorators.py  tests.py
django_extensions/anonymous_required/: README.md  __init__.py  decorators.py  tests.py
django_extensions/anthropic_integration/: README.md  __init__.py  client.py  tests.py
django_extensions/auto_created_field/: README.md  __init__.py  fields.py  tests.py
django_extensions/auto_modified_field/: README.md  __init__.py  fields.py  tests.py
django_extensions/aws_s3_storage/: README.md  __init__.py  storage.py  tests.py
django_extensions/aws_ses_email/: README.md  __init__.py  backend.py  tests.py
django_extensions/aws_sns_notifications/: README.md  __init__.py  notifications.py  tests.py
django_extensions/aws_sqs_queue/: README.md  __init__.py  queue.py  tests.py
django_extensions/cache_decorator/: README.md  __init__.py  decorators.py  tests.py
django_extensions/clean_pyc/: README.md  __init__.py  tests.py
django_extensions/color_validator/: README.md  __init__.py  tests.py  validators.py
django_extensions/credit_card_validator/: README.md  __init__.py  tests.py  validators.py
django_extensions/discord_notifications/: README.md  __init__.py  notifications.py  tests.py
django_extensions/email_utils/: README.md  __init__.py  tests.py  utils.py
django_extensions/encrypted_field/: README.md  __init__.py  fields.py  tests.py
django_extensions/generate_secret_key/: README.md  __init__.py  tests.py
django_extensions/humanize_tags/: README.md  templatetags.py  tests.py
django_extensions/json_schema_field/: README.md  __init__.py  fields.py  tests.py
django_extensions/math_tags/: README.md  templatetags.py  tests.py
django_extensions/money_field/: README.md  __init__.py  fields.py  tests.py
django_extensions/openai_integration/: README.md  __init__.py  client.py  tests.py
django_extensions/ordered_model/: README.md  __init__.py  models.py  tests.py
django_extensions/pagination_utils/: README.md  __init__.py  pagination.py  tests.py
django_extensions/phone_field/: README.md  __init__.py  fields.py  tests.py
django_extensions/phone_validator/: README.md  __init__.py  tests.py  validators.py
django_extensions/random_manager/: README.md  __init__.py  managers.py  tests.py
django_extensions/redis_cache/: README.md  __init__.py  cache.py  tests.py
django_extensions/request_logging_middleware/: README.md  __init__.py  middleware.py  tests.py
django_extensions/reset_db/: README.md  __init__.py  tests.py
django_extensions/sentry_integration/: README.md  __init__.py  tests.py  tracking.py
django_extensions/shell_plus/: README.md  __init__.py  tests.py
django_extensions/short_uuid_field/: README.md  __init__.py  fields.py  tests.py
django_extensions/show_urls/: README.md  __init__.py  tests.py
django_extensions/slack_notifications/: README.md  __init__.py  notifications.py  tests.py
django_extensions/slugged_model/: README.md  __init__.py  models.py  tests.py
django_extensions/soft_delete/: __init__.py  managers.py  models.py  tests.py
django_extensions/soft_delete_manager/: README.md  __init__.py  tests.py
django_extensions/soft_delete_model/: README.md
django_extensions/status_model/: README.md  __init__.py  models.py  tests.py
django_extensions/string_tags/: README.md  templatetags.py  tests.py
django_extensions/stripe_payments/: README.md  __init__.py  payments.py  tests.py
docs/: index.html
(+37 files in other folders)
