[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-extensions-collection"
version = "0.1.0"
description = "A collection of Django extensions"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["Django>=3.2"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_settings"
